--- a/index.html
+++ b/index.html
@@ -82,10 +82,15 @@
   <section id="contact" class="py-20 bg-gray-100">
     <div class="max-w-6xl mx-auto px-4 text-center">
       <h3 class="text-3xl font-bold mb-8" data-aos="fade-up">Contact Me</h3>
-      <p class="mb-6">📧 Email: <a href="mailto:ajit@example.com" class="text-blue-600">ajit@example.com</a></p>
-      <a href="https://github.com/yourusername" target="_blank" class="inline-block px-6 py-3 bg-blue-600 text-white rounded-full shadow hover:bg-blue-700" data-aos="zoom-in">GitHub Profile</a>
-    </div>
+      
+<section id="contact" class="py-20 bg-gray-100 text-center">
+    <h3 class="text-3xl font-bold mb-6">Contact Me</h3>
+    <p class="mb-4">Let’s connect for opportunities or collaboration.</p>
+    <p>Email: <a href="mailto:ajit@example.com" class="text-blue-600 hover:underline">ajit@example.com</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" class="text-blue-600 hover:underline">linkedin.com/in/yourprofile</a></p>
+    <p>GitHub: <a href="https://github.com/yourusername" class="text-blue-600 hover:underline">github.com/yourusername</a></p>
   </section>
+
 
   <!-- Footer -->
   <footer class="py-6 bg-white text-center shadow-inner">
@@ -103,3 +108,4 @@
 
 </body>
 </html>
+
