--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
           I have over 10 years of experience in international voice process customer service, including advanced collections for US clients.  
           Currently, I am transitioning into IT as an <span class="font-semibold text-blue-600">Application Support Engineer</span>.  
           I’m passionate about troubleshooting, SQL, and providing technical solutions.  
+<p>Motivated IT professional transitioning from 4+ years of BPO international voice process to Application Support Engineering. Skilled in SQL, Linux, ticketing tools Jira, and application troubleshooting. Strong experience in managing multiple enterprise applications, providing production support, and resolving critical issues with excellent communication and problem-solving skills.</p>
+
+          
         </p>
       </div>
     </div>
@@ -107,5 +110,6 @@
 
 </body>
 </html>
+
 
 
