--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
          class="w-40 h-40 rounded-full shadow-lg border-4 border-white mb-6"
          data-aos="zoom-in">
     
-    <h2 class="text-4xl md:text-6xl font-bold mb-4" data-aos="fade-up">Hi, I'm Ajit 👋</h2>
+    <h2 class="text-4xl md:text-6xl font-bold mb-4" data-aos="fade-up">Hi, I'm Ajit Ujagare 👋</h2>
     <p class="text-lg md:text-2xl" data-aos="fade-up" data-aos-delay="200">4+ years of Experience as Application Support Engineer </p>
     <a href="#contact" class="mt-6 inline-block px-6 py-3 bg-white text-blue-600 rounded-full shadow hover:bg-gray-200" data-aos="zoom-in" data-aos-delay="400">Hire Me</a>
   </section>
@@ -110,6 +110,7 @@
 
 </body>
 </html>
+
 
 
 
